--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
   <h1>Conversor PFX para CRT + KEY</h1>
   <p>Selecione o arquivo PFX:</p>
-  <input type="file" id="pfx-file" />
+  <input type="file" id="fileInput" accept=".pfx"><br><br>
   <p>Digite a senha do PFX:</p>
-  <input type="password" id="pfx-password" />
+  <input type="file" id="fileInput" accept=".key"><br><br>
+  <br><br>
   <button onclick="convert()">Converter</button>
   <p id="result"></p>
 
@@ -34,6 +35,9 @@
         }
       });
     }
+    
+
+
   </script>
 </body>
 </html>
