feature: criação da nova página de tipo de conversão.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p>Potencialize a segurança ao converter seus próprios certificados internos, mitigando assim os riscos inerentes ao envolvimento com prestadores de serviços externos!</p>
                     <div class="btn-gpm">
                         <div>
-                            <button class="btn bg-btn-white"><a href="home/home.html">Próximo</a></button>
+                            <button class="btn bg-btn-white"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
                         </div>
                         <div>
                             <button class="btn bg-btn-out"><a href="https://www.electronjs.org/pt/docs/latest/">Documentação</a></button>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-home" src="imagem/img-index.svg" alt="Imagem de exemplo">
+                    <img class="img-home" src="imagem/img-index.svg" alt="Imagem ilustrativa do index">
                 </div>
             </div>
         </div>   
