feature: ajuste na tela de escolha de certificado e ajuste no direcionamento da documentação.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <p>Potencialize a segurança ao converter seus próprios certificados internos, mitigando assim os riscos inerentes ao envolvimento com prestadores de serviços externos!</p>
                     <div class="btn-gpm">
                         <div>
-                            <button class="btn bg-btn-white"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
+                            <button class="btn btn bg-btn-out"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
                         </div>
                         <div>
-                            <button class="btn bg-btn-out"><a href="https://www.electronjs.org/pt/docs/latest/">Documentação</a></button>
+                            <button class="btn bg-btn-out"><a href="https://github.com/dev-ana-lopes/Cert-Client">Documentação</a></button>
                         </div>
                     </div>
                 </div>
