--- a/upload/upload.html
+++ b/upload/upload.html
@@ -15,7 +15,7 @@
             <div class="menu-right">
                 <ul class="nav col-6 col-md-auto mb-2 justify-content-end mb-md-0">
                     <li><a href="../index.html" class="px-2 tx-color-white">Início</a></li>
-                    <li><a href="https://www.electronjs.org/pt/docs/latest/" class="px-2 tx-color-white">Documentação</a></li>
+                    <li><a href="https://github.com/dev-ana-lopes/Cert-Client" class="px-2 tx-color-white">Documentação</a></li>
                     <li>
                         <div class="dark-mode-toggle">
                         <input type="checkbox" id="dark-mode-toggle-checkbox">
