feature: criação do menu superior.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,44 @@
     
 </head>
 <body class="bg-gradiente">
-    <header>
-        <img src="imagem/tecnospeed-white 1.svg" alt="">
+    <div class="navbar">
+        <div class="logo">
+            <div class="logo-icon">
+                CertClient
+            </div>
+        </div>
+        <div id="menu" class="nav-items">
+            <div class="item">
+                <img src="../Cert-Client/imagem/remove-circle-outline.svg" alt="remove-circle-outline">
+            </div>
+            <div class="item">
+                <img src="../Cert-Client/imagem/browsers-outline.svg" alt="browsers-outline">
+            </div>
+            <div class="item">
+                <img src="../Cert-Client/imagem/close-circle-outline.svg" alt="close-circle-outline">
+            </div>
+        </div>
+    </div>
+    <header class="pd-body">
+        <img class="selector" src="imagem/tecnospeed-white 1.svg" alt="">
     </header>
-    <main>
+    <main class="pd-body">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 align-div">
                     <h1>CertClient</h1>
                     <p>Potencialize a segurança ao converter seus próprios certificados internos, mitigando assim os riscos inerentes ao envolvimento com prestadores de serviços externos!</p>
-                    <div class="btn-gpm">
+                    <div id="btn-gpm">
                         <div>
-                            <button class="btn btn bg-btn-out"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
+                            <button id="bg-btn-white" class="btn"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
                         </div>
                         <div>
-                            <button class="btn bg-btn-out"><a href="https://github.com/dev-ana-lopes/Cert-Client">Documentação</a></button>
+                            <button id="bg-btn-out" class="btn"><a href="https://github.com/dev-ana-lopes/Cert-Client">Documentação</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-home" src="imagem/img-index.svg" alt="Imagem ilustrativa do index">
+                    <img id="logo-index" class="selector" src="imagem/img-index.svg" alt="Imagem ilustrativa do index">
                 </div>
             </div>
         </div>   
