--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 
     <body>
         <h1>Conversor PFX para CRT + KEY</h1>
-        <p>Selecione o arquivo PFX:</p>
-        <input type="file" id="pfxInput" accept=".pfx"><br><br>
+        <p>Selecione o arquivo PFX:</p> <span id="pfxSizeSpan"></span>
+        <input type="file" id="pfxInput" accept=".pfx" onchange="armazenarArquivo(event)"><br><br>
         <p>Digite a senha de seu arquivo PFX:</p>
         <input type="password" id="pfxPassword" placeholder="Senha" onkeypress="validarSenha(event)">
         <br><br>
-        <button onclick="startConvertPfxToCrt()">Converter</button>
+        <button onclick="startConvertPfxToCrt(); obterTamanhoArquivo();">Converter Arquivo</button>
         <p id="result"></p>
-      
+
         <h1>Conversor CRT + KEY para PFX</h1>
-        <p>Selecione o arquivo CRT:</p>
+        <p>Selecione o arquivo CRT:</p> <span id="crtSizeSpan"></span>
         <input type="file" id="crtInput" accept=".crt"><br><br>
-        <p>Selecione o arquivo KEY:</p>
+        <p>Selecione o arquivo KEY:</p>  <span id="crtKeySizeSpan"></span>
         <input type="file" id="crtKeyInput" accept=".key"><br><br>
         <p>Digite a sua nova senha para seu PFX:</p>
         <input type="password" id="crtPassword" placeholder="Senha" onkeypress="validarSenha(event)">
@@ -26,5 +26,6 @@
         <button onclick="startConvertCrtAndKeyToPfx()">Converter</button>
         <p id="result"></p>
     </body>
-    <script src ="index.js"></script>
+
+    <script src="index.js"></script>
 </html>
