feature: ajuste no package-look, adição do html de teste

--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
     </main>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
