--- a/tipo-certificado/tipo-certificado.html
+++ b/tipo-certificado/tipo-certificado.html
@@ -1,64 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tipo-certificado.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="imagem/icon.svg" type="image/x-icon">
-    <title>CertClient</title>
-</head>
-<body class="bg-gradiente">
-    <header>
-        <nav class="d-flex justify-content-between align-items-center">
-            <img class="nav col-6 col-md-auto mb-2 justify-content-start mb-md-0" src="../imagem/tecnospeed-white 1.svg" alt="">
-            <div class="menu-right">
-                <ul class="nav col-6 col-md-auto mb-2 justify-content-end mb-md-0">
-                    <li><a href="../index.html" class="px-2 tx-color-white">Início</a></li>
-                    <li><a href="https://github.com/dev-ana-lopes/Cert-Client" class="px-2 tx-color-white">Documentação</a></li>
-                    <li>
-                        <div class="dark-mode-toggle">
-                        <input type="checkbox" id="dark-mode-toggle-checkbox">
-                        <label for="dark-mode-toggle-checkbox"></label>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="tipo-certificado.css">
+        <link rel="stylesheet" href="/global/style.css">
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
+        <link rel="shortcut icon" href="imagem/icon.svg" type="image/x-icon">
+        <title>CertClient</title>
+    </head>
+    <body class="bg-gradiente">
+        <header>
+            <nav class="d-flex justify-content-between align-items-center nav-style">
+                <img class="size-logo" src="../imagem/tecnospeed-white 1.svg" alt="">
+                <div class="menu-right">
+                    <ul class="nav col-6 col-md-auto mb-2 justify-content-end mb-md-0">
+                        <li><a href="../index.html" class="px-2 tx-color-white">Início</a></li>
+                        <li><a id="docs" class="px-2 tx-color-white">Documentação</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="sol-container">
+                <img src="../imagem/Sol_1.png" class="sol">
+            </div>
+            <div class="custom-mt">
+                <div class="border-bottom title">
+                    <h2 class="text-align-center fs-4">Selecione o tipo de conversão desejada</h2>
+                </div>
+                    <div class="forms">
+                        <form>
+                            <label class="itens-forms">
+                                <div>
+                                    <input type="checkbox" id="check" class="check" name="opcao" value="pfx-crtkey" required/>
+                                    <label for="check"></label>
+                                </div> 
+                                <img class="img" src="../imagem/pfx.png">                     
+                                <span class="margin">PFX para CRT + KEY</span>
+                            </label>
+                                <br>
+                            <label class="itens-forms">
+                                <div>
+                                    <input type="checkbox" id="check2" class="check2" name="opcao" value="crtkey-pfx" required/>
+                                    <label for="check2"></label>
+                                </div>
+                                <img class="img" src="../imagem/key.png">     
+                                <span class="margin"> CRT + KEY para PFX</span>
+                            </label>       
+                                <br>
+                            <div  class="mt-4"> 
+                                <input type="checkbox" name="aceito_termos" required>
+                                <span class="terms-link">Li e aceito o termos de responsabilidade<span class="required">*</span></span>
+                            </div>   
+                                <br>
+                            <button id="btn-proximo" class="next-btn" type="submit" disabled>Próximo</button>
+                        </form>
+                        <div class="nuvens">
+                            <div class="nuvem-d">
+                                <img src="../imagem/Nuvem-Direita_1.png" class="nuvem-di">
+                            </div>
+                            <div class="nuvem-e">
+                                <img src="../imagem/Nuvem-esquerda_1.png" class="nuvem-es">
+                            </div>
                         </div>
-                    </li>
-                </ul>
+                    </div>
             </div>
-        </nav>
-    </header>
-    <main>
-        <div class="container">
-            <div class="row border-bottom">
-                <h2 class="text-align-center">Selecione o tipo de conversão desejada</h2>
-            </div>
-            <div class="forms">
-                <form>
-                    <label class="itens-forms">
-                      <input type="radio" name="opcao" value="pfx-crtkey" required> PFX para CRT + KEY
-                    </label>
-                    <br>
-                    <label class="itens-forms">
-                      <input type="radio" name="opcao" value="crtkey-pfx"> CRT + KEY para PFX
-                    </label>
-                    <br>
-                    <label class="">
-                        <label>Senha do certificado: </label>
-                        <input type="password" name="password" required> 
-                      </label>
-                      <br>
-                    <label>
-                        <input type="checkbox" name="aceito_termos" required>
-                        <a>Li e aceito o termos de responsabilidade</a>
-                    </label>
-                    <br>
-                    <button class="mt-3 btn bg-btn" type="submit">
-                        <a href="../upload/upload.html">Proximo</a> 
-                    </button>
-                </form>
-            </div>
-        </div>
-    </main>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="tipo-certificado.js"></script>
-</body>
-</html>
+        </main>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="tipo-certificado.js"></script>
+    </body>
+    </html>
