--- a/upload/upload.html
+++ b/upload/upload.html
@@ -47,15 +47,16 @@
                             <img class="img" src="../imagem/upload.png" alt="ícone de upload">
                         </div>
                         <div class="icon-upload">
-                            <button  id="upload-button" class="upload-button mt-3 mb-3" onclick="openInputFiles()">Abrir arquivo</button>
+                            <button id="upload-button" class="upload-button mt-3 mb-3" onclick="openInputFiles()">Abrir
+                                arquivo</button>
                         </div>
-                       <div class="icon-upload">
+                        <div class="icon-upload">
                             <h2 id="fonte" class="fonte">Ou arraste e solte em qualquer lugar</h2>
-                       </div>
+                        </div>
                     </div>
                 </div>
             </div>
-    
+
             <!------------------- Antigo forms de senha -----------------
             <div class="password-form">
                 <form action="/autenticacao" method="post">
@@ -65,11 +66,22 @@
                     </label>
                 </form>
             </div> -->
+            <div class="container2">
+                <div class="barra">
+                    <div class="icone"></div>
+                    <div id="mensagem" class="mensagem">Digite a senha do seu arquivo </div>
+                </div>
+                <div class="caixa-branca">
+                    <input type="password" class="entrada-senha" placeholder="Digite a senha" />
+                </div>
+            </div>
+
             <div class="button">
                 <button id="convert" class="btn-convert" type="button" data-target="#password">Converter</button>
             </div>
 
             <!------------------- Adicionar modal de senha aqui  --------------->
+
 
         </div>
         <div class="nuvens">
