--- a/upload/upload.html
+++ b/upload/upload.html
@@ -53,16 +53,14 @@
                     </div>
                 </div>
             </div>
-
-            <!------------------- Antigo forms de senha -----------------
-            <div class="password-form">
+            <!-- <div class="password-form">
                 <form action="/autenticacao" method="post">
                     <label class="itens-forms">
                         <label for="password">Senha:</label>
                         <input type="password" id="password" name="password" required> 
                     </label>
                 </form>
-            </div> 
+            </div>  -->
             <div class="container2">
                 <div class="barra">
                     <div class="icone"></div>
@@ -76,8 +74,6 @@
             <div class="button">
                 <button id="convert" class="btn-convert custom-button" type="button" data-target="#password">Converter</button>
             </div>
-            
-
         </div>
         <div class="nuvens">
             <div class="nuvem-d selector">
