Update CSS, HTML, and JS files in tipo-certificado and upload directories, modifying styles, layouts, and functionality.

--- a/upload/upload.html
+++ b/upload/upload.html
@@ -27,9 +27,21 @@
     </header>
     <main>
         <div class="container-fluid">
+            <div class="border-bottom title">
+                <h2 id="output" class="text-align-center fs-4"></h2>
+            </div>
             <div class="docs-area">
                 <div class="align-items-center justify-content-center">
                     <div class="drop-area" id="dropArea">
+                        <div id="drop-area-text" class="drop-area-text" onclick="openInputFiles()">
+                            <div class="icon-upload selector">
+                                <img class="img selector" src="../imagem/upload.png" alt="ícone de upload">
+                            </div>
+                            <div class="icon-upload">
+                                <h2 id="fonte" class="fonte">Clique aqui<br></h2>
+                                <h2 id="fonte2" class="fonte">Ou arraste e solte o arquivo na área tracejada</h2>
+                            </div>
+                        </div>
                         <div class="icon-upload">
                             <div>
                                 <img id="img1" class="sizeFile selector" src="../imagem/file.png">
@@ -40,34 +52,15 @@
                                 <span id="span2"></span>
                             </div>
                         </div>
-                        <div class="icon-upload selector">
-                            <img class="img selector" src="../imagem/upload.png" alt="ícone de upload">
-                        </div>
-                        <div class="icon-upload">
-                            <button id="upload-button" class="upload-button mt-3 mb-3" onclick="openInputFiles()">Abrir
-                                arquivo</button>
-                        </div>
-                        <div class="icon-upload">
-                            <h2 id="fonte" class="fonte">Ou arraste e solte em qualquer lugar</h2>
-                        </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="password-form">
-                <form action="/autenticacao" method="post">
-                    <label class="itens-forms">
-                        <label for="password">Senha:</label>
-                        <input type="password" id="password" name="password" required> 
-                    </label>
-                </form>
-            </div>  -->
             <div class="container2">
                 <div class="barra">
-                    <div class="icone"></div>
                     <div id="mensagem" class="mensagem">Digite a senha do seu arquivo </div>
                 </div>
                 <div class="caixa-branca">
-                    <input type="password" class="entrada-senha" placeholder="Digite a senha" />
+                    <input id="password" type="password" class="entrada-senha" placeholder="Digite a senha" />
                 </div>
             </div>
 
