Refactored upload functionality, updated CSS and HTML for drag-and-drop area, and modified JavaScript logic for file handling and conversion. Co-authored-by: Dieyson <D13YSON@users.noreply.github.com>

--- a/upload/upload.html
+++ b/upload/upload.html
@@ -33,13 +33,13 @@
             <div class="docs-area">
                 <div class="align-items-center justify-content-center">
                     <div class="drop-area" id="dropArea">
-                        <div id="drop-area-text" class="drop-area-text" onclick="openInputFiles()">
-                            <div class="icon-upload selector">
+                        <div id="drop-area-text" class="drop-area-text icon-upload" onclick="openInputFiles()">
+                            <div id="imgUpload" class="icon-upload selector">
                                 <img class="img selector" src="../imagem/upload.png" alt="ícone de upload">
                             </div>
                             <div class="icon-upload">
                                 <h2 id="fonte" class="fonte">Clique aqui<br></h2>
-                                <h2 id="fonte2" class="fonte">Ou arraste e solte o arquivo na área tracejada</h2>
+                                <h2 id="fonte2" class="fonte">Ou arraste e solte o arquivo na área delimitada</h2>
                             </div>
                         </div>
                         <div class="icon-upload">
