Ajustes nas funções upload.js e condicionamento do hidden na areaDrop

--- a/upload/upload.html
+++ b/upload/upload.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="button">
-                <button id="convert" class="btn-convert custom-button" type="button" data-target="#password" onclick="sendToMain()">Converter</button>
+                <button id="convert" class="btn-convert custom-button" type="button" data-target="#password" onclick="chooseFileSendMain()">Converter</button>
             </div>
         </div>
         <div class="nuvens">
